add read endpoint
